sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:17: error: 'while' expected but '}' found.
  }
  ^AlgCombSort:20: error: illegal start of simple expression
} 
^AlgCombSort:23: error: Unmatched closing brace '}' ignored here
}
^